--- a/pom.xml
+++ b/pom.xml
@@ -54,7 +54,7 @@
 		<dependency>
     	<groupId>net.sf.jasperreports</groupId>
     	<artifactId>jasperreports</artifactId>
-    	<version>6.17.0</version>
+    	<version>6.12.2</version>
 		</dependency>
 		
         <dependency>
@@ -99,12 +99,14 @@
     		<artifactId>itext</artifactId>
     		<version>2.1.7</version>
 		</dependency>
-
+		
+		
 		<dependency>
 			<groupId>com.microsoft.sqlserver</groupId>
 			<artifactId>mssql-jdbc</artifactId>
 			<scope>runtime</scope>
 		</dependency>
+
  		
         
         <dependency>
@@ -118,13 +120,11 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/com.microsoft.sqlserver/mssql-jdbc -->
-		<dependency>
-    		<groupId>com.microsoft.sqlserver</groupId>
-    		<artifactId>mssql-jdbc</artifactId>
-    		<version>9.4.0.jre8</version>
-		</dependency>
-	
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>	
         	
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
